--- a/web/memic_model.html
+++ b/web/memic_model.html
@@ -84,7 +84,14 @@
 
                 <h4> How does this work?</h4>
                 <p>
-                Click the "start" button in the lower left to start the model. Click "stop" at any time to pause it.
+                Click the "start" button in the lower left to start the model.
+                Click "stop" at any time to pause it.
+                
+                The left box shows a map of oxygen concentration across the world (higher hue values (e.g. blue, purple, magenta) have more oxygen).
+                You can click anywhere on the map to add oxygen there.
+
+                The right box shows the phylogenetic depth (distance from original ancestor) of each cell in the world. Higher hue values are farther down
+                the tree (i.e. more generations have elapsed). Black cells are unoccupied.
                 </p>
 
 
