--- a/web/memic_model.html
+++ b/web/memic_model.html
@@ -55,9 +55,11 @@
         <div class="col"> 
             <div id="cell_area"></div>
         </div>
-    </div>
-    <div class="row align-items-center">
-        <div id="control_area"></div>
+    <!-- </div>
+    <div class="row align-items-center"> -->
+        <div class="col"> 
+            <div id="control_area"></div>
+        </div>
     </div>
 </div>
 
