Add statistics display

--- a/web/memic_model.html
+++ b/web/memic_model.html
@@ -60,6 +60,9 @@
         <div class="col"> 
             <div id="control_area"></div>
         </div>
+        <div class="col"> 
+            <div id="stats_area"></div>
+        </div>
     </div>
 </div>
 
